// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test SchemePicker API should render the picker with dark theme 1`] = `
<div
  className="css-kat7fb"
>
  <div
    className="css-3ef40x"
    style={
      Object {
        "background": "#ff69b4",
      }
    }
  >
    <div
      className="css-1uaa0vj"
      style={
        Object {
          "color": "#000",
        }
      }
    >
      #ff69b4
    </div>
  </div>
  <div
    style={
      Object {
        "padding": 10,
      }
    }
  >
    <input
      className="css-sskoaq"
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder=""
      spellCheck="false"
      value="#FF69B4"
    />
    <div
      className="css-l0y1uc"
    >
      <div
        className="css-1vdl9s8"
        onClick={[Function]}
        onKeyDown={[Function]}
      />
      <div
        className="css-p63zky"
        onClick={[Function]}
        onKeyDown={[Function]}
      />
      <div
        className="css-b2f2lw"
        onClick={[Function]}
        onKeyDown={[Function]}
      />
      <div
        className="css-16ttn42"
        onClick={[Function]}
        onKeyDown={[Function]}
      />
      <div
        className="css-1rwxsvi"
        onClick={[Function]}
        onKeyDown={[Function]}
      />
      <div
        className="css-j4ryw8"
        onClick={[Function]}
        onKeyDown={[Function]}
      />
      <div
        className="css-spj86u"
        onClick={[Function]}
        onKeyDown={[Function]}
      />
      <div
        className="css-150uwje"
        onClick={[Function]}
        onKeyDown={[Function]}
      />
      <div
        className="css-ux87fl"
        onClick={[Function]}
        onKeyDown={[Function]}
      />
      <div
        className="css-1ipqz9g"
        onClick={[Function]}
        onKeyDown={[Function]}
      />
      <div
        className="css-1s2l6pn"
        onClick={[Function]}
        onKeyDown={[Function]}
      />
      <div
        className="css-1an9c6"
        onClick={[Function]}
        onKeyDown={[Function]}
      />
      <div
        className="css-13vgj6b"
        onClick={[Function]}
        onKeyDown={[Function]}
      />
      <div
        className="css-gufmoq"
        onClick={[Function]}
        onKeyDown={[Function]}
      />
      <div
        className="css-gtj06n"
        onClick={[Function]}
        onKeyDown={[Function]}
      />
      <div
        className="css-d1mkxw"
        onClick={[Function]}
        onKeyDown={[Function]}
      />
      <div
        className="css-64i6oy"
        onClick={[Function]}
        onKeyDown={[Function]}
      />
      <div
        className="css-u0335p"
        onClick={[Function]}
        onKeyDown={[Function]}
      />
      <div
        className="css-103rh2c"
        onClick={[Function]}
        onKeyDown={[Function]}
      />
      <div
        className="css-t8uazz"
        onClick={[Function]}
        onKeyDown={[Function]}
      />
      <div
        className="css-198vteo"
        onClick={[Function]}
        onKeyDown={[Function]}
      />
      <div
        className="css-k6sfay"
        onClick={[Function]}
        onKeyDown={[Function]}
      />
      <div
        className="css-d5opru"
        onClick={[Function]}
        onKeyDown={[Function]}
      />
      <div
        className="css-j2605y"
        onClick={[Function]}
        onKeyDown={[Function]}
      />
      <div
        className="css-r9zmy3"
        onClick={[Function]}
        onKeyDown={[Function]}
      />
      <div
        className="css-1ooxqv9"
        onClick={[Function]}
        onKeyDown={[Function]}
      />
      <div
        className="css-1hfgnc8"
        onClick={[Function]}
        onKeyDown={[Function]}
      />
      <div
        className="css-19bw1qc"
        onClick={[Function]}
        onKeyDown={[Function]}
      />
      <div
        className="css-vfp5e4"
        onClick={[Function]}
        onKeyDown={[Function]}
      />
      <div
        className="css-vguc45"
        onClick={[Function]}
        onKeyDown={[Function]}
      />
    </div>
    <div
      className="css-upj78"
    >
      <span
        aria-label="Copied"
        className="no-tooltip css-1v5ga19"
        id="scheme-picker-clipboard"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}
      >
        <svg
          className="css-1h5x3dy"
          height={18}
          viewBox="0 0 20 20"
          width={19}
        >
          <title />
          <path
            d="M15.6 2l-1.2 3h-8.8l-1.2-3c-0.771 0-1.4 0.629-1.4 1.4v15.2c0 0.77 0.629 1.4 1.399 1.4h11.2c0.77 0 1.4-0.631 1.4-1.4v-15.2c0.001-0.771-0.63-1.4-1.399-1.4zM13.6 4l0.9-2h-2.181l-0.719-2h-3.2l-0.72 2h-2.18l0.899 2h7.201z"
            fill="rgb(255, 255, 255)"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Test SchemePicker API should render the scheme picker 1`] = `
<div
  className="css-16h51e"
>
  <div
    className="css-3ef40x"
    style={
      Object {
        "background": "#ff69b4",
      }
    }
  >
    <div
      className="css-1uaa0vj"
      style={
        Object {
          "color": "#000",
        }
      }
    >
      #ff69b4
    </div>
  </div>
  <div
    style={
      Object {
        "padding": 10,
      }
    }
  >
    <input
      className="css-sskoaq"
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder=""
      spellCheck="false"
      value="#FF69B4"
    />
    <div
      className="css-l0y1uc"
    >
      <div
        className="css-1vdl9s8"
        onClick={[Function]}
        onKeyDown={[Function]}
      />
      <div
        className="css-p63zky"
        onClick={[Function]}
        onKeyDown={[Function]}
      />
      <div
        className="css-b2f2lw"
        onClick={[Function]}
        onKeyDown={[Function]}
      />
      <div
        className="css-16ttn42"
        onClick={[Function]}
        onKeyDown={[Function]}
      />
      <div
        className="css-1rwxsvi"
        onClick={[Function]}
        onKeyDown={[Function]}
      />
      <div
        className="css-j4ryw8"
        onClick={[Function]}
        onKeyDown={[Function]}
      />
      <div
        className="css-spj86u"
        onClick={[Function]}
        onKeyDown={[Function]}
      />
      <div
        className="css-150uwje"
        onClick={[Function]}
        onKeyDown={[Function]}
      />
      <div
        className="css-ux87fl"
        onClick={[Function]}
        onKeyDown={[Function]}
      />
      <div
        className="css-1ipqz9g"
        onClick={[Function]}
        onKeyDown={[Function]}
      />
      <div
        className="css-1s2l6pn"
        onClick={[Function]}
        onKeyDown={[Function]}
      />
      <div
        className="css-1an9c6"
        onClick={[Function]}
        onKeyDown={[Function]}
      />
      <div
        className="css-13vgj6b"
        onClick={[Function]}
        onKeyDown={[Function]}
      />
      <div
        className="css-gufmoq"
        onClick={[Function]}
        onKeyDown={[Function]}
      />
      <div
        className="css-gtj06n"
        onClick={[Function]}
        onKeyDown={[Function]}
      />
      <div
        className="css-d1mkxw"
        onClick={[Function]}
        onKeyDown={[Function]}
      />
      <div
        className="css-64i6oy"
        onClick={[Function]}
        onKeyDown={[Function]}
      />
      <div
        className="css-u0335p"
        onClick={[Function]}
        onKeyDown={[Function]}
      />
      <div
        className="css-103rh2c"
        onClick={[Function]}
        onKeyDown={[Function]}
      />
      <div
        className="css-t8uazz"
        onClick={[Function]}
        onKeyDown={[Function]}
      />
      <div
        className="css-198vteo"
        onClick={[Function]}
        onKeyDown={[Function]}
      />
      <div
        className="css-k6sfay"
        onClick={[Function]}
        onKeyDown={[Function]}
      />
      <div
        className="css-d5opru"
        onClick={[Function]}
        onKeyDown={[Function]}
      />
      <div
        className="css-j2605y"
        onClick={[Function]}
        onKeyDown={[Function]}
      />
      <div
        className="css-r9zmy3"
        onClick={[Function]}
        onKeyDown={[Function]}
      />
      <div
        className="css-1ooxqv9"
        onClick={[Function]}
        onKeyDown={[Function]}
      />
      <div
        className="css-1hfgnc8"
        onClick={[Function]}
        onKeyDown={[Function]}
      />
      <div
        className="css-19bw1qc"
        onClick={[Function]}
        onKeyDown={[Function]}
      />
      <div
        className="css-vfp5e4"
        onClick={[Function]}
        onKeyDown={[Function]}
      />
      <div
        className="css-vguc45"
        onClick={[Function]}
        onKeyDown={[Function]}
      />
    </div>
    <div
      className="css-upj78"
    >
      <span
        aria-label="Copied"
        className="no-tooltip css-1v5ga19"
        id="scheme-picker-clipboard"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}
      >
        <svg
          className="css-1h5x3dy"
          height={18}
          viewBox="0 0 20 20"
          width={19}
        >
          <title />
          <path
            d="M15.6 2l-1.2 3h-8.8l-1.2-3c-0.771 0-1.4 0.629-1.4 1.4v15.2c0 0.77 0.629 1.4 1.399 1.4h11.2c0.77 0 1.4-0.631 1.4-1.4v-15.2c0.001-0.771-0.63-1.4-1.399-1.4zM13.6 4l0.9-2h-2.181l-0.719-2h-3.2l-0.72 2h-2.18l0.899 2h7.201z"
            fill="#1f1f1f"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;
